Implemented subscription access block features
implemented features to block access for users with inactive or expired subscriptions. Added a new filter to check subscription status on each request and restrict access accordingly. Updated exception handling to provide meaningful error messages when access is denied due to subscription issues.